# synthetically_engineered_evaluation_data

./: .gitignore  404.html  CONTRIBUTING.md  GETTING_STARTED.md  Makefile  README.md  RELEASING.md  SECURITY.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
API-Reference/: index.html
API-Reference/critique/: index.html
API-Reference/generator/: index.html
API-Reference/packet/: index.html
API-Reference/tools/: index.html
API-Reference/utils/: index.html
Advanced/: index.html
Advanced/architecture/: index.html
Advanced/augmentation/: index.html
Advanced/models/: index.html
Advanced/renderers/: index.html
CLI-Usage/: index.html
Getting-Started/: index.html
Getting-Started/installation/: index.html
Getting-Started/quick-start/: index.html
Guides/: index.html
Guides/batch-generation/: index.html
Guides/creating-a-document-type/: index.html
Guides/generation-choices/: index.html
Guides/packets/: index.html
Guides/schema-from-documents/: index.html
Guides/single-document/: index.html
Python-API-Usage/: index.html
docs/: Makefile  generation_choices.md  mkdocs.yml  packets.md
docs/docs/: .nav.yml  index.md
docs/docs/API-Reference/: .nav.yml  README.md  batch.md  critique.md  generator.md  orchestrate.md  packet.md  tools.md  utils.md
docs/docs/Advanced/: .nav.yml  README.md  architecture.md  augmentation.md  models.md  renderers.md
docs/docs/CLI-Usage/: README.md
docs/docs/Getting-Started/: .nav.yml  README.md  installation.md  quick-start.md
docs/docs/Guides/: .nav.yml  README.md  batch-generation.md  creating-a-document-type.md  generation-choices.md  packets.md  schema-from-documents.md  single-document.md
docs/docs/Python-API-Usage/: README.md
docs/planning/: MILESTONE_1_UNIFIED_SCHEMA.md  MILESTONE_2_INGEST_AND_STRUCTURED.md  MILESTONE_3_DOCUMENT_GENERATION_WIRING.md  MILESTONE_4_END_TO_END_INTEGRATION.md  MILESTONE_5_POLISH_AND_RELEASE.md  README.md
scripts/: batch_generate.py  packet_generate.py
search/: search_index.json
src/doc_gen_agent/: __init__.py  __main__.py  augment.py  batch.py  cli.py  critique.py  orchestrate.py  packet.py  session.py  tools.py  utils.py
src/doc_gen_agent/prompts/: __init__.py  critic.j2  critic_vision.j2  doc_generator.j2  doc_generator_html.j2  reportlab_cheatsheet.md
src/doc_gen_agent/schemas/bank-statement/: generation_guidance.md
src/doc_gen_agent/schemas/cable-bill/: schema.json
src/doc_gen_agent/schemas/cable-bill/samples/: README.md
src/doc_gen_agent/schemas/commercial-lease/: generation_guidance.md  schema.json
src/doc_gen_agent/schemas/credit-report/: schema.json
src/doc_gen_agent/schemas/employment-verification-letter/: generation_guidance.md
src/doc_gen_agent/schemas/fcc-invoice/: generation_guidance.md  schema.json
src/doc_gen_agent/schemas/fcc-invoice/samples/: README.md
src/doc_gen_agent/schemas/homeowners-insurance-declaration/: generation_guidance.md
src/doc_gen_agent/schemas/insurance-claim/: schema.json
src/doc_gen_agent/schemas/invoice/: generation_guidance.md
src/doc_gen_agent/schemas/loan-application/: generation_guidance.md  schema.json
src/doc_gen_agent/schemas/medical-discharge/: generation_guidance.md
src/doc_gen_agent/schemas/pay-stub/: schema.json
src/doc_gen_agent/schemas/police-report/: generation_guidance.md  schema.json
src/doc_gen_agent/schemas/property-appraisal/: generation_guidance.md
src/doc_gen_agent/schemas/statement-of-work/: generation_guidance.md
src/seed_data/: __init__.py  __main__.py  api.py  augment.py  batch.py  cli.py  critique.py  infer.py  inputs.py  nodes.py  orchestrate.py  packet.py  packet_infer.py  schema.py  tools.py  utils.py
src/seed_data/packets/insurance-claim-packet/: packet.json
src/seed_data/packets/lending-package/: packet.json
src/seed_data/prompts/: aug_critic.j2  augmentor.j2  data_critic.j2  data_generator.j2  doc_generator_html.j2  packet_split.j2  schema_inference.j2
src/seed_data/schemas/bank-statement/: schema.json
src/seed_data/schemas/cable-bill/: generation_guidance.md
src/seed_data/schemas/credit-report/: generation_guidance.md
src/seed_data/schemas/employment-verification-letter/: schema.json
src/seed_data/schemas/homeowners-insurance-declaration/: schema.json
src/seed_data/schemas/insurance-claim/: generation_guidance.md
src/seed_data/schemas/invoice/: schema.json
src/seed_data/schemas/medical-discharge/: schema.json
src/seed_data/schemas/pay-stub/: generation_guidance.md
src/seed_data/schemas/property-appraisal/: schema.json
src/seed_data/schemas/statement-of-work/: schema.json
src/seed_data/schemas/title-report/: generation_guidance.md  schema.json
src/seed_data/schemas/w2/: generation_guidance.md  schema.json
src/seed_data/stages/: __init__.py  augment_stage.py  base.py  batch.py  data.py  document.py  pipeline.py
tests/: test_api.py  test_augment.py  test_cli_smoke.py  test_infer.py  test_packet.py  test_packet_infer.py  test_pipeline_wiring.py  test_schema.py  test_stages_base.py  test_stages_batch.py  test_stages_data.py  test_subgraph.py  test_unit.py
tests/integration/: test_doc_gen.py
