[project]
name = "seed-data"
dynamic = ["version"]
description = "AI-powered synthetic document generation pipeline for benchmarking document extraction (IDP/KIE) systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "reportlab",
    "xhtml2pdf",
    "weasyprint",
    "pillow",
    "python-dotenv",
    "boto3",
    "jinja2",
    "augraphy",
    "pypdfium2",
    "pypdf",
    "opencv-python",
    "pyyaml",
]

# pip-compatible extras (for `pip install -e ".[dev]"`)
# Note: the `dev` extra must be kept in sync with [dependency-groups].dev below
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-nav",
    "mkdocstrings-python",
    "pymdown-extensions",
]

[project.scripts]
seed-data = "seed_data.__main__:main"

[project.urls]
Homepage = "https://github.com/awslabs/synthetically-engineered-evaluation-data"
Repository = "https://github.com/awslabs/synthetically-engineered-evaluation-data"
Documentation = "https://awslabs.github.io/synthetically_engineered_evaluation_data/"
Issues = "https://github.com/awslabs/synthetically-engineered-evaluation-data/issues"

[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

# Version is derived from the git tag by setuptools-scm — do not hard-code it.
# Tag a release `vX.Y.Z` (via a GitHub Release) and the build picks up X.Y.Z.
# Untagged/dev builds get a version like 0.0.3.dev2+g<sha>.
[tool.setuptools_scm]

[tool.pytest.ini_options]
# Put src/ on the import path so tests can `import seed_data` without an
# editable install or per-file sys.path hacks.
pythonpath = ["src"]
testpaths = ["tests"]
# Integration tests (tests/integration/) need live AWS credentials; exclude
# them from the default run. Invoke explicitly: uv run pytest tests/integration
addopts = "--ignore=tests/integration"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
seed_data = ["schemas/**/*.json", "schemas/**/*.md", "prompts/*.j2", "packets/**/*.json"]

# uv-native dependency groups (for `uv sync`)
# Keep in sync with [project.optional-dependencies] above
[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
]
test = [
    "pytest",
]
lint = [
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-nav",
    "mkdocstrings-python",
    "pymdown-extensions",
]

[tool.uv]
# Wait 7 days before resolving newly published package versions, so a freshly
# compromised or unstable release is not pulled in immediately.
# https://docs.astral.sh/uv/concepts/resolution/#dependency-cooldowns
exclude-newer = "7 days"
default-groups = ["dev"]
